<resources>
    <string name="app_name">Weather App</string>
    <string name="api_key">eb12b52d0d067a9895acb90822c97d12</string>
    <string name="good">Good</string>
    <string name="fair">Fair</string>
    <string name="moderate">Moderate</string>

    <string name="sunrise">sunrise</string>
    <string name="max_temp">Max temp</string>
    <string name="feels_like">Feels like</string>
    <string name="min_temp">Min temp</string>
    <string name="air_quality">Air Quality</string>
    <string name="perfect">perfect</string>
    <string name="five_days_forecast">Five Days Forecast</string>
    <string name="clear_sky">Clear Sky</string>
    <string name="location">Location</string>
    <string name="updated_at">updated at</string>
    <string name="_24_c">24°C</string>
    <string name="pressure">Pressure</string>
    <string name="sunset">Sunset</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind speed</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>