<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity"
    >



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        android:padding="10dp">



        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glMainLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.12" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/glMainLocation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/glMainLocation">

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/location"
                android:textColor="@color/white"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_update_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/updated_at"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <androidx.cardview.widget.CardView
                app:cardElevation="8dp"
                android:layout_margin="16dp"
                android:id="@+id/cardSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/semi_transparent"
                app:cardCornerRadius="10dp">

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/searchView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:iconifiedByDefault="false"
                    app:queryHint="Search here...." />

            </androidx.cardview.widget.CardView>

        </LinearLayout>



        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glMainTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.40" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/glMainTemp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/glMainTemp"
            app:layout_constraintVertical_bias="0.34">

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_sky"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/_24_c"
                android:textColor="@color/black"
                android:textSize="80sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/img_weather"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_status" />

            <TextView
                android:id="@+id/tv_min_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min_temp"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_max_temp"
                app:layout_constraintEnd_toStartOf="@+id/tv_max_temp"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_max_temp" />

            <TextView
                android:id="@+id/tv_max_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/max_temp"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tv_min_temp"
                app:layout_constraintTop_toBottomOf="@+id/tv_feels_like" />

            <ImageView
                android:id="@+id/img_weather"
                android:layout_width="220dp"
                android:layout_height="200dp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_temp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tv_temp"
                app:layout_constraintTop_toTopOf="@+id/tv_temp"
                app:srcCompat="@drawable/humidity" />

            <TextView
                android:id="@+id/tv_feels_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/feels_like"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@+id/img_weather"
                app:layout_constraintStart_toStartOf="@+id/tv_temp"
                app:layout_constraintTop_toBottomOf="@+id/tv_temp" />

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glMainCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.72" />

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:backgroundTint="@color/semi_transparent"
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp"
            app:layout_constraintBottom_toTopOf="@+id/glMainCard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/glMainCard">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/semi_transparent"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/glVMiddle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/glVLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.2" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/glVRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.8" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/glHtop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.25" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/glHbottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.75" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toTopOf="@+id/glHtop"
                    app:layout_constraintEnd_toStartOf="@+id/glVLeft"
                    app:layout_constraintStart_toStartOf="@+id/glVLeft"
                    app:layout_constraintTop_toTopOf="@+id/glHtop">


                    <ImageView
                        android:id="@+id/imgSunrise"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/sunrise" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunrise"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvSunrise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="05:00"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toTopOf="@+id/glHtop"
                    app:layout_constraintEnd_toStartOf="@+id/glVMiddle"
                    app:layout_constraintStart_toStartOf="@+id/glVMiddle"
                    app:layout_constraintTop_toTopOf="@+id/glHtop">


                    <ImageView
                        android:id="@+id/imgSunset"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/sunset" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunset"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvSunset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="05:00"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toTopOf="@+id/glHbottom"
                    app:layout_constraintEnd_toStartOf="@+id/glVMiddle"
                    app:layout_constraintStart_toStartOf="@+id/glVMiddle"
                    app:layout_constraintTop_toTopOf="@+id/glHbottom">


                    <ImageView
                        android:id="@+id/imgHumidity"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/humidity" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvHumidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="05:00"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toTopOf="@+id/glHtop"
                    app:layout_constraintEnd_toStartOf="@+id/glVRight"
                    app:layout_constraintStart_toStartOf="@+id/glVRight"
                    app:layout_constraintTop_toTopOf="@+id/glHtop">


                    <ImageView
                        android:id="@+id/imgWind"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/wind" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wind_speed"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvWind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="05:00"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glMainForecastBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="585dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>